<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <DUT Name="ST_ADSReadWriteRes" Id="{7db59109-3460-41fc-b66d-15bac92af164}">
    <Declaration><![CDATA[TYPE ST_ADSReadWriteRes :
STRUCT
	nNumberOfOutputArguments	: UDINT;
	nReserved					: ARRAY [1..4] OF BYTE; // padding
	stOutputArgInfo				: ST_UAMethodArgInfo;
	arrAddr						: T_IPv4AddrArr	:=[ 0, 0, 0, 0];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>