<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <GVL Name="GVL_Tests" Id="{4c60bfd3-9bee-45c1-8b42-741145196a9b}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	sPujaNetID				: T_AmsNetID := '172.17.214.3.1.1'; 
//	sHenningNetID			: T_AmsNetID := '172.17.214.25.1.1';

	gNodeIDCount					: UINT := 10;
	gNodeIDCount_Array				: UINT := 2;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>